pp2/samples/bad5.out

*** Error line 2.
   bool notgood, variables;
               ^
*** parse error

